...
                                onClick = { saveSettings?.invoke() },
                                enabled = saveSettings != null,
                                contentPadding = PaddingValues(horizontal = 16.dp, vertical = 8.dp),
                            ) {
                                NavSaveIcon()
                                Spacer(Modifier.width(6.dp))
                                Text("Save")
                            }
                        }
                    },
                )
            },
            bottomBar = {
...
